--- a/views/register.html
+++ b/views/register.html
@@ -14,7 +14,7 @@
 
 <div id="form-wapper">
     <h1>Welcome</h1>
-    <form method="post">
+    <form id="register-form" method="post">
         <input type="text" name="username" placeholder="请输入用户名"/>
         <br/>
         <input type="password" name="password" placeholder="请输入密码"/>
@@ -24,5 +24,7 @@
     </form>
 
 </div>
+<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+<script src="../static/js/register.js"></script>
 </body>
 </html>
