--- a/views/login.html
+++ b/views/login.html
@@ -3,13 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>登录</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="/static/css/login.css">
 </head>
 <body>
-<div>
-  <ul>
-    <li><a href="/login">登录</a> </li>
-    <li><a href="/register">注册</a></li>
-  </ul>
-</div>
+
+
+<!--    <h1>Welcome</h1>-->
+<!--    <form id="login-form" method="post">-->
+<!--        <input type="text" name="username" placeholder="请输入用户名"/>-->
+<!--        <br/>-->
+<!--        <input type="password" name="password" placeholder="请输入密码"/>-->
+<!--        <br/>-->
+<!--        <button type="submit">登录</button>-->
+<!--    </form>-->
+<form class="form-signin" id="login-form" method="post">
+    <div class="text-center mb-4">
+        <h1 class="h3 mb-3 font-weight-normal">品味 - 登录</h1>
+    </div>
+
+    <div class="form-label-group">
+        <input type="text"  id="username" name="username" class="form-control" placeholder="请输入用户名" required autofocus>
+        <label for="username">用户名</label>
+    </div>
+
+    <div class="form-label-group">
+        <input type="password" name="password" id="password" class="form-control" placeholder="请输入密码" required>
+        <label for="password">密码</label>
+    </div>
+
+<!--    <div class="checkbox mb-3">-->
+<!--        <label>-->
+<!--            <input type="checkbox" value="remember-me"> Remember me-->
+<!--        </label>-->
+<!--    </div>-->
+    <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+    <p class="mt-5 mb-3 text-muted text-center">&copy; 2017-2021</p>
+</form>
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" ></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" ></script>
+<script src="../static/js/login.js"></script>
 </body>
 </html>
